# page_cache

./: Cargo.toml  rustfmt.toml
src/: backend.rs  block.rs  block_slice.rs  error.rs  guard.rs  lib.rs  lru.rs  main.rs  mock_io.rs  policy.rs  storage.rs  stroage.rs
src/backend/: backend.rs  backend_impl.rs  memory_backend.rs  mod.rs
src/handle/: handle.rs  mod.rs  read.rs  reader.rs  write.rs  writer.rs
tests/: manger.rs  storage.rs
