[package]
name = "page_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
bytes = "1.5.0"
crossbeam-queue = "0.3.11"
futures = "0.3.30"
hashbrown = "0.14.3"
hashlink = "0.9.0"
opendal = "0.45.0"
parking_lot = "0.12.1"
tokio = "1.36.0"
tracing = "0.1.40"
