[package]
name = "page_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
bytes = "1.5.0"
crossbeam = "0.8.4"
crossbeam-queue = "0.3.11"
crossbeam-skiplist = "0.1.3"
dashmap = "5.5.3"
futures = "0.3.30"
hashbrown = "0.14.3"
hashlink = "0.9.0"
nix = "0.23.1"
opendal = "0.45.0"
parking_lot = "0.12.1"
rand = "0.8.5"
smallvec = "1.13.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"

[profile.release]
debug = true
strip = false
